2009-02-25  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/notification-groups.conf: Add D-Bus call to com.nokia.modest
	/com/nokia/modest com.nokia.modest OpenDefaultInbox for multiple mail
	messages. Fixes: NB#103001

	* debian/changelog: Update.

2009-02-24  Jan Arne Petersen  <jpetersen@openismus.com>

	* configure.ac:
	* debian/control: Add mce-dev dependency.

	* src/hd-incoming-events.c: On incoming events request mce to turn
	display backlight on. Fixes: NB#100745

	* debian/changelog: Update.

2009-02-24  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/hd-system-notifications.c (destroy_dialog,
	  hd_system_notifications_dispose,
	  hd_system_notifications_class_init): Free queue on dispose. Fixes:
	  NB#102456

	* debian/changelog: Update.

2009-02-24  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#102470

	* src/hd-bookmark-manager.c (parse_idle_id,
	  hd_bookmark_manager_parse_bookmark_files,
	  hd_bookmark_manager_bookmark_files_changed,
	  hd_bookmark_manager_monitor_bookmark_files,
	  hd_bookmark_manager_dipose): Rename parse_thread_id to
	  parse_idle_id.
	* src/hd-bookmark-shortcut.c (LABEL_WIDTH): Enclose in parentheses.
	  (hd_bookmark_shortcut_update_from_gconf, delete_event_cb): Use
	  g_clear_error.

	* debian/changelog: Update.

2009-02-23  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/hd-backgrounds.c (create_cached_background): Fix writing changed
	background to GConf.

2009-02-23  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Released 0.3.13
	* configure.ac: 0.3.13

2009-02-21  Jan Arne Petersen  <jpetersen@openismus.com>

	Make hildon-home maemo-launched. Fixes: NB#101032

	* configure.ac: Add support for --enable-maemo-launcher flag.

	* debian/rules: Add support for maemo launcher.
	
	* debian/control: Add maemo-launcher-dev build-dep.

	* src/Makefile.am: Add maemo launcher CFLAGS/LDFLAGS.

	* src/hildon-home.c: Add g_thread_supported() check.

	* debian/changelog: Update.
